[gd_scene load_steps=3 format=3 uid="uid://d30ccoot04tb8"]

[ext_resource type="Script" path="res://scripts/enemy_spawner.gd" id="1_ue4bk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gl1sx"]
radius = 20.0

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_ue4bk")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 15.0

[node name="SpawnInterval" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_gl1sx")

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="SpawnInterval" to="." method="_on_spawn_interval_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
